# Entage

./: .gitignore  LICENSE  README.md
docs/doxygen/: doxyfile.cfg
src/: CMakeLists.txt
src/Entage/: CMakeLists.txt
src/Entage/IO/: JSON.cpp  JSON.h
src/Entage/Map/: MapArray.cpp  MapArray.h  MapBase.cpp  MapBase.h  MapCompound.cpp  MapCompound.h  MapValue.cpp  MapValue.h  ViewCompound.cpp  ViewCompound.h  ViewCompoundRoot.cpp  ViewCompoundRoot.h
src/Entage/Tree/: TreeArray.cpp  TreeArray.h  TreeArrayCompound.cpp  TreeArrayCompound.h  TreeCompound.cpp  TreeCompound.h  TreeElement.cpp  TreeElement.h  TreeValue.cpp  TreeValue.h  Types.cpp  Types.h
src/Examples/: CMakeLists.txt  ExampleOne.cpp
